--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   icons_plus: ^5.0.0
   flutter_feather_icons: ^2.0.0+1
   font_awesome_flutter: ^10.7.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
